<resources>
    <string name="app_name">MineMind+</string>
    <string name="tes1">INTELLIGENCE TEST</string>
    <string name="tes2">PERSONALITY TEST</string>
    <string name="tes3">FUN QUIZ</string>
    <string name="please_choose1">Please Choose Quiz Mode</string>
    <string name="sub_kuis1">Answer the questions and add your insight about human mind and brain, become smarter is always be cool :)</string>
    <string name="kuisbenarsalah">Right Or Wrong Quiz</string>
    <string name="multi_choice">Multiple Choice</string>
    <string name="introQuiz">Let\'s Begin a Short Brief About This Quiz</string>
    <string name="introRW">Is It Right or Wrong?</string>
    <string name="introSubRW">In this mode 50 questions will be available with only two choices of answers, true or false. Any questions answered correctly will get +2 score, but be aware, any wrong answer will reduce your score -1. Your job is to conquer as many of these as possible and get the highest score. Wohoooo! By the way do not forget to read the unique facts that appear every time you answer the question, meaning that every question you answer really adds to your real knowledge points. :)</string>
    <string name="letsgo">Let\'s Go!</string>
    <string name="beatThis">How to Beat This Challenge?</string>
    <string name="qNo">Question</string>
    <string name="right">right</string>
    <string name="wrong">wrong</string>
    <string name="correctAnswer">Your Answer is Correct!</string>
    <string name="wrongAnswer">Your Answer is Not Correct!</string>
    <string name="soundsInteresting">Sound\'s Interesting!</string>
    <string name="rwq1" formatted="false">Brain uses about 5% of total energy and oxygen.</string>
    <string name="rwf1" formatted="false">In facts, The typical brain is about 2% of a body’s weight but uses 20% of its total energy and oxygen intake</string>
    <string name="rwq2" formatted="false">Brain is 53% water.</string>
    <string name="rwf2" formatted="false">In facts, Your brain is 73% water. It takes only 2% dehydration to affect your attention, memory and other cognitive skills</string>
    <string name="rwq3" formatted="false">Brain is the fattiest organ</string>
    <string name="rwf3" formatted="false">In facts, Your brain weighs about 3 pounds. Of that, the dry weight is 60% fat, making your brain the fattiest organ</string>
    <string name="rwq4" formatted="false">Our Brain needs cholesterol</string>
    <string name="rwf4" formatted="false">In facts, Twenty-five percent of the body’s cholesterol resides within the brain. Cholesterol is an integral part of every brain cell. Without adequate cholesterol, brain cells die. Obviously you must control your cholesterol.</string>
    <string name="rwq5" formatted="false">Brain contain 1 million brain cells</string>
    <string name="rwf5" formatted="false">In facts, our brain contain far more. No one knows for sure, but the latest estimate is that our brains contain roughly 86 billion brain cells</string>
    <string name="rwq6" formatted="false">All brain cells are same</string>
    <string name="rwf6" formatted="false">In facts, All brain cells are not alike. There are as many as 10,000 specific types of neurons in the brain</string>
    <string name="rwq7" formatted="false">Adult brain grows faster than babies brain.</string>
    <string name="rwf7" formatted="false">In facts, Babies have big heads to hold rapidly growing brains. A 2-year-old’s brain is 80% of adult size</string>
    <string name="rwq8" formatted="false">Our brain move between cells faster than Formula 1 race</string>
    <string name="rwf8" formatted="false">In facts, Brain information moves anywhere between 1 mph and an impressive 268 miles per hour. This is faster than Formula 1 race cars which top out at 240 mph</string>
    <string name="rwq9" formatted="false">Our brain contain electricity</string>
    <string name="rwf9" formatted="false">In facts, Your brain generates about 12-25 watts of electricity. This is enough to power a low wattage LED light</string>
    <string name="rwq10" formatted="false">About 100,000 chemicals reactions take place in brain every second</string>
    <string name="rwf10" formatted="false">In facts, More than 100,000 chemicals reactions take place in your brain every second</string>
    <string name="rwq11" formatted="false">Female brain are bigger than men’s brain</string>
    <string name="rwf11" formatted="false">In facts, generally men’s brains are 10% bigger than women’s, even after taking into account larger body size</string>
    <string name="rwq12" formatted="false">Albert Einstein brain are bigger than average people brain</string>
    <string name="rwf12" formatted="false">In facts, Albert Einstein’s brain weighed 2.71 pounds (1,230 grams) — 10% smaller than the average of 3 pounds (1,400 grams). However, the neuron density of his brain was greater than average</string>
    <string name="rwq13" formatted="false">Human have the biggest brain among all creatures</string>
    <string name="rwf13" formatted="false">In facts, Humans don’t have the biggest brains. That honor belongs to sperm whales with 17-pound brains</string>
    <string name="rwq14" formatted="false">Multitask makes our brain work more productive</string>
    <string name="rwf14" formatted="false">In facts, Multitasking makes you less productive. When you multitask, your brain simply rapidly toggles back and forth between tasks. This results in decreases in attention span, learning, performance, and short-term memory</string>
    <string name="rwq15" formatted="false">Millennials people (aged 18 to 34) are less forgetful</string>
    <string name="rwf15" formatted="false">In facts, Surprisingly, millennials (aged 18 to 34) are more forgetful than baby boomers. They are more likely to forget what day it is or where they put their keys than their parents</string>
    <string name="rwq16" formatted="false">Brain cells cannibalize themselves</string>
    <string name="rwf16" formatted="false">In facts, Brain cells cannibalize themselves as a last ditch source of energy to ward off starvation. So in very real ways dieting can force your brain to eat itself</string>
    <string name="rwq17" formatted="false">Our brain can store unlimited information</string>
    <string name="rwf17" formatted="false">In facts, Your brain’s storage capacity is considered virtually unlimited. It doesn’t get “used up” like RAM in your computer</string>
    <string name="rwq18" formatted="false">We are only using 10% of our brains</string>
    <string name="rwf18" formatted="false">The popular myth that we use only 10% of our brains is flat-out wrong. Brain scans clearly show that we use most of our brain most of the time, even when we’re sleeping</string>
    <string name="rwq19" formatted="false">Left-brainded personality type are analytics person, and Right-brainded personality type are creative person</string>
    <string name="rwf19" formatted="false">In facts, There is no such thing as a left-brain or right-brain personality type. We are not left-brained or right-brained; we are “whole brained.”</string>
    <string name="rwq20" formatted="false">Our brain cells are far more than stars in the Milky Way</string>
    <string name="rwf20" formatted="false">You may have heard that we have more brain cells than there are stars in the Milky Way, but this is not true. In facts, Best guess estimates are that we have 86 billion neurons and there are 200-400 billion stars in the Milky Way</string>
    <string name="rwq21" formatted="false">Emotions can affects how accurately we remember something</string>
    <string name="rwf21" formatted="false">In facts, Memories are shockingly unreliable. Emotions, motivation, cues, context and frequency of use can all affect how accurately you remember something</string>
    <string name="rwq22" formatted="false">One Information to memorize are stored in one place in our brains</string>
    <string name="rwf22" formatted="false">In facts, Memory is more of an activity than a place. Any given memory is deconstructed and distributed in different parts of the brain. Then, for the memory to be recalled, it gets reconstructed from the individual fragments</string>
    <string name="rwq23" formatted="false">When we drunk, our brain is capable of forming memories</string>
    <string name="rwf23" formatted="false">If you were drinking and don’t remember what you did last night, it’s not because you forgot. While you are drunk your brain is incapable of forming memories</string>
    <string name="rwq24" formatted="false">Our brain are a solid organ</string>
    <string name="rwf24" formatted="false">The human brain is not solid. It’s soft and squishy similar to the consistency of soft tofu or soft gelatin. And it’s very fragile</string>
    <string name="rwq25" formatted="false">Life with half of our brain is impossible</string>
    <string name="rwf25" formatted="false">Sometimes half a brain is a good as a whole one. When surgeons perform a hemispherectomy, they remove or disable half of the brain to stop seizures. Shockingly, patients experience no effect on personality or memory</string>
    <string name="rwq26" formatted="false">Most of our decision are take place in our subconscious mind</string>
    <string name="rwf26" formatted="false">Think you’re in control of your life? Think again. 95% of your decisions take place in your subconscious mind</string>
    <string name="rwq27" formatted="false">Neurons in our body is only in our brain</string>
    <string name="rwf27" formatted="false">The brain in your head isn’t your only brain. There’s a “second brain” in your intestines that contains 100 million neurons. Gut bacteria are responsible for making over 30 neurotransmitters including the “happy molecule” serotonin</string>
    <string name="rwq28" formatted="false">Sleeping pills put our brain into state similar to being coma</string>
    <string name="rwf28" formatted="false">Prescription sleeping pills don’t put you to sleep. They put your brain into a state similar to being in a coma, essentially bypassing any restorative value of sleep</string>
    <string name="rwq29" formatted="false">Our cell phone can damage our brain</string>
    <string name="rwf29" formatted="false">Over 140 proteins in the brain are negatively impacted by exposure to electromagnetic frequencies — the kind emitted by your cell phone and other electronic devices</string>
    <string name="rwq30" formatted="false">When we feel pain, our brain is also feel the pain</string>
    <string name="rwf30" formatted="false">Although pain is processed in your brain, your brain has no pain receptors and feels no pain. This explains how brain surgery can be performed while the patient is awake with no pain or discomfort</string>
    <string name="rwq31" formatted="false">Children who learn to play a musical instrument are smarter</string>
    <string name="mbtiIntroText">In this mode, you will be presented with 60 questions, where each question will be listed a statement. Your job is to choose the statement that best suits your personality, of course the more you are honest in this test, the more accurate the results. After the question is complete, then your personal results will be instantly displayed on the screen, Hurray! :)</string>
    <string name="MBTIHead">Know Yourself Better, With MBTI Standard</string>
    <string name="shareWorld">Share the Result to the World!</string>
    <string name="youare">You Are</string>
    <string name="great">Great!</string>
    <string name="curious">Curious About The Answer?</string>
    <string name="kunciJawabanCRT">the answer is actually simple, question number one answer 5, for question number two the answer is also 5, and for question number 3 the answer is 47. already understand what it means? :)</string>
    <string name="Lang">English</string>
</resources>