<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aldhosutra.minemind.MBTIIntro"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#e91e63"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_mbti"
                android:scaleType="centerCrop"
                android:alpha="0.15"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingRight="32dp"
                android:paddingLeft="32dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/MBTIHead"
                    android:textSize="32dp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif"
                    android:textColor="#ffffff"
                    android:paddingBottom="16dp"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="32dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beatThis"
                android:textColor="#e91e63"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:id="@+id/id1"
                android:layout_marginBottom="32dp"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/id1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mbtiIntroText"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"/>

            </ScrollView>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:id="@+id/layQuiz1"
        android:layout_alignParentBottom="true"
        android:background="#e91e63"
        android:layout_marginTop="32dp"
        android:onClick="goToMBTIQuiz">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/letsgo"
            android:id="@+id/btnGo1"
            android:background="#e91e63"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_toRightOf="@id/view1"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:textAllCaps="true"/>

    </RelativeLayout>

</LinearLayout>
