<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aldhosutra.minemind.hasilIQ"
    android:background="@color/colorMaterialPink">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/youare"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:paddingTop="16dp"
                android:id="@+id/judul1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cognitive Thinker"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_below="@id/judul1"
                android:id="@+id/kodePersona" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/great"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textSize="24sp"
                android:paddingBottom="16dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/kodeHebat" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingBottom="40dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Disini penjelasan lengkap hasil tes CRT"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:id="@+id/lengkapCRT"
                        android:textAlignment="center"
                        android:textStyle="italic"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/curious"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:id="@+id/penasaran"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/kunciJawabanCRT"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:id="@+id/kunciJawaban"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>

                </LinearLayout>


            </ScrollView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/shareWorld"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_share"
                android:tint="@color/white"
                android:padding="8dp"
                android:onClick="shareHasilIQ"/>

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_home"
                android:tint="@color/white"
                android:padding="8dp"
                android:onClick="goToHome"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
