<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aldhosutra.minemind.MainActivity"
    android:background="#e91e63">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_info"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:tint="@color/white"
        android:id="@+id/about"
        android:onClick="goToAbout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="64dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="40sp"
            android:fontFamily="sans-serif"
            android:id="@+id/judul1"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="56dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/layGo1"
            android:layout_below="@id/judul1"
            android:layout_marginBottom="16dp"
            android:background="#ffffff"
            android:onClick="goToIQChoice">

            <ImageView
                android:id="@+id/pic1"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/ic_lightbulb_outline_black_24dp"
                android:tint="#ffc107" />

            <View
                android:layout_width="2dp"
                android:layout_height="32dp"
                android:background="#ffc107"
                android:layout_toRightOf="@id/pic1"
                android:id="@+id/view1"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tes1"
                android:id="@+id/btnGo1"
                android:background="#ffffff"
                android:textColor="#ffc107"
                android:textStyle="bold"
                android:layout_toRightOf="@id/view1"
                android:layout_centerVertical="true"
                android:textAlignment="center"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/layGo2"
            android:layout_below="@id/layGo1"
            android:layout_marginBottom="16dp"
            android:background="#ffffff"
            android:onClick="goToPersonaChoice">

            <ImageView
                android:id="@+id/pic2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/ic_personality"
                android:tint="#ffc107" />

            <View
                android:layout_width="2dp"
                android:layout_height="32dp"
                android:background="#ffc107"
                android:layout_toRightOf="@id/pic2"
                android:id="@+id/view2"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tes2"
                android:id="@+id/btnGo2"
                android:background="#ffffff"
                android:textColor="#ffc107"
                android:textStyle="bold"
                android:layout_toRightOf="@id/view2"
                android:layout_centerVertical="true"
                android:textAlignment="center"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/layGo3"
            android:layout_below="@id/layGo2"
            android:layout_marginBottom="16dp"
            android:background="#ffffff"
            android:onClick="goToQuiz">

            <ImageView
                android:id="@+id/pic3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/ic_fun"
                android:tint="#ffc107" />

            <View
                android:layout_width="2dp"
                android:layout_height="32dp"
                android:background="#ffc107"
                android:layout_toRightOf="@id/pic3"
                android:id="@+id/view3"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tes3"
                android:id="@+id/btnGo3"
                android:background="#ffffff"
                android:textColor="#ffc107"
                android:textStyle="bold"
                android:layout_toRightOf="@id/view3"
                android:layout_centerVertical="true"
                android:textAlignment="center"/>

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lang"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:onClick="showBahasa"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="32dp"/>

</RelativeLayout>
